--- a/package.json
+++ b/package.json
@@ -1,13 +1,7 @@
 {
   "name": "kimyou",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "web": "pnpm -F \"web\""
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC"
+  "license": "MIT"
 }
