--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "pnpm": ">=10.0.0"
   },
   "license": "MIT",
-  "dependencies": {
-    "typescript": "~5.6.2"
+  "devDependencies": {
+    "typescript": "~5.6.3"
   }
 }
