--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   },
   "license": "MIT",
   "devDependencies": {
-    "@types/node": "^22.13.0",
-    "typescript": "~5.6.3"
+    "@types/node": "22.13.0",
+    "typescript": "5.7.3"
   }
 }
