chore: Add hono

--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -3,5 +3,9 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "@hono/node-server": "1.13.8",
+    "hono": "4.6.20"
+  }
 }
