--- a/package.json
+++ b/package.json
@@ -10,5 +10,8 @@
   "devDependencies": {
     "@types/node": "22.13.0",
     "typescript": "5.7.3"
+  },
+  "dependencies": {
+    "tsx": "4.19.2"
   }
 }
