--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -1,7 +1,8 @@
 {
   "name": "backend",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "tsx watch src/index.ts"
   },
   "license": "MIT",
   "dependencies": {
