--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "tsx": "4.19.2",
-    "valibot": "1.0.0-beta.14"
+    "valibot": "1.0.0-beta.14",
+    "vitest": "3.0.5"
   }
 }
