--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "typescript": "5.7.3"
   },
   "dependencies": {
+    "date-fns": "4.1.0",
     "tsx": "4.19.2",
     "valibot": "1.0.0-beta.14",
     "vitest": "3.0.5"
