feat: Add database schema for administrator, monto, and buddhist_profile tables

--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -10,6 +10,10 @@
     "@hono/node-server": "1.13.8",
     "@types/bcrypt": "5.0.2",
     "bcrypt": "5.1.1",
+    "drizzle-orm": "0.39.1",
     "hono": "4.6.20"
+  },
+  "devDependencies": {
+    "drizzle-kit": "0.30.4"
   }
 }
