feat: Add cli interface

--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -4,7 +4,8 @@
   "scripts": {
     "test": "vitest run",
     "dev:http:sever": "tsx watch src/entrypoint/httpServer/index.ts",
-    "drizzle:generate": "drizzle-kit generate --config=./src/infrastructure/db/d1/drizzle.config.ts"
+    "drizzle:generate": "drizzle-kit generate --config=./src/infrastructure/db/d1/drizzle.config.ts",
+    "cli:start": "tsx src/entrypoint/cli/index.ts"
   },
   "license": "MIT",
   "dependencies": {
