--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -9,6 +9,7 @@
   },
   "devDependencies": {
     "@cloudflare/workers-types": "^4.20250109.0",
+    "tailwindcss": "4.0.3",
     "wrangler": "^3.101.0"
   }
 }
