--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
   "license": "MIT",
   "devDependencies": {
     "@types/node": "22.13.0",
+    "drizzle-kit": "0.30.4",
     "typescript": "5.7.3"
   },
   "dependencies": {
     "date-fns": "4.1.0",
+    "drizzle": "1.4.0",
     "tsx": "4.19.2",
     "valibot": "1.0.0-beta.14",
     "vitest": "3.0.5"
