fix: Update CLI start script to point to the new entry point

--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -3,7 +3,7 @@
   "type": "module",
   "scripts": {
     "test": "vitest run",
-    "cli:start": "tsx src/entrypoint/cli/index.ts"
+    "cli:start": "tsx src/index.ts"
   },
   "license": "MIT"
 }
