--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "date-fns": "4.1.0",
     "drizzle": "1.4.0",
+    "drizzle-orm": "^0.39.2",
     "tsx": "4.19.2",
     "valibot": "1.0.0-beta.14",
     "vitest": "3.0.5"
