--- a/package.json
+++ b/package.json
@@ -10,14 +10,14 @@
   "devDependencies": {
     "@types/node": "22.13.0",
     "drizzle-kit": "0.30.4",
-    "typescript": "5.7.3"
+    "typescript": "5.7.3",
+    "vitest": "3.0.5"
   },
   "dependencies": {
     "date-fns": "4.1.0",
     "drizzle": "1.4.0",
     "drizzle-orm": "^0.39.2",
     "tsx": "4.19.2",
-    "valibot": "1.0.0-beta.14",
-    "vitest": "3.0.5"
+    "valibot": "1.0.0-beta.14"
   }
 }
