feat: Add drizzle:generate script to package.json for database schema generation

--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -2,7 +2,8 @@
   "name": "web",
   "scripts": {
     "dev": "wrangler dev",
-    "deploy": "wrangler deploy --minify"
+    "deploy": "wrangler deploy --minify",
+    "drizzle:generate": "drizzle-kit generate --config=./src/infrastructure/db/d1/drizzle.config.ts"
   },
   "dependencies": {
     "hono": "^4.6.20"
