--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -1,11 +1,14 @@
 {
   "name": "web",
+  "type": "module",
   "scripts": {
     "dev": "wrangler dev",
     "deploy": "wrangler deploy --minify",
-    "drizzle:generate": "drizzle-kit generate --config=./src/infrastructure/db/d1/drizzle.config.ts"
+    "drizzle:generate": "drizzle-kit generate --config=./src/infrastructure/db/d1/drizzle.config.ts",
+    "drizzle:migrate:local": "wrangler d1 migrations apply D1 --local"
   },
   "dependencies": {
+    "@types/node": "22.13.0",
     "hono": "^4.6.20"
   },
   "devDependencies": {
