--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -2,10 +2,11 @@
   "name": "web",
   "type": "module",
   "scripts": {
-    "dev": "wrangler dev",
+    "dev": "wrangler dev --config=./wrangler.local.json",
     "deploy": "wrangler deploy --minify",
     "drizzle:generate": "drizzle-kit generate --config=./src/infrastructure/db/d1/drizzle.config.ts",
-    "drizzle:migrate:local": "wrangler d1 migrations apply D1 --local"
+    "drizzle:migrate:local": "wrangler d1 migrations apply D1 --local",
+    "drizzle:migrate": "wrangler d1 migrations apply D1 --remote"
   },
   "dependencies": {
     "@types/node": "22.13.0",
