feat: Add validation for first name search in montos endpoint and update query handling

--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -9,6 +9,7 @@
     "drizzle:migrate": "wrangler d1 migrations apply D1 --remote"
   },
   "dependencies": {
+    "@hono/valibot-validator": "0.5.2",
     "@types/node": "22.13.0",
     "hono": "^4.6.20"
   },
