--- a/packages/web/tsconfig.json
+++ b/packages/web/tsconfig.json
@@ -9,9 +9,10 @@
       "ESNext"
     ],
     "types": [
-      "@cloudflare/workers-types/2023-07-01"
+      "@cloudflare/workers-types/2023-07-01",
+      "vitest/importMeta"
     ],
     "jsx": "react-jsx",
-    "jsxImportSource": "hono/jsx"
+    "jsxImportSource": "hono/jsx",
   },
 }
