--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -6,18 +6,24 @@ on:
       - main
 
 jobs:
-  deploy:
+  deploy-web:
+    name: Deploy Web Package
     environment: 
       name: prod
     defaults:
       run:
         working-directory: ./packages/web
     runs-on: ubuntu-latest
-    name: Deploy
     steps:
       - uses: actions/checkout@v4
+      - uses: pnpm/action-setup@v4
+        with:
+          version: 10
+      - run: pnpm install
       - run: echo "${{ secrets.WRANGLER_JSON }}" > ./wrangler.json
+        working-directory: ./packages/web
       - name: Deploy
         uses: cloudflare/wrangler-action@v3
         with:
           apiToken: ${{ secrets.CLOUDFLARE_API_TOKEN }}
+          workingDirectory: ./packages/web
