--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -20,7 +20,7 @@ jobs:
         with:
           version: 10
       - run: pnpm install
-      - run: echo "${{ secrets.WRANGLER_JSON }}" > ./wrangler.json
+      - run: echo ${{ secrets.WRANGLER_JSON }} > ./wrangler.json
         working-directory: ./packages/web
       - name: Deploy
         uses: cloudflare/wrangler-action@v3
