--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -17,7 +17,9 @@ jobs:
         with:
           version: 10
       - run: pnpm install
-      - run: echo ${{ secrets.WRANGLER_JSON }} > ./wrangler.json
+      # - run: echo ${{ secrets.WRANGLER_JSON }} > ./wrangler.json
+      #   working-directory: ./packages/web
+      - run: echo '{"name": "kimyou"}' > ./wrangler.json
         working-directory: ./packages/web
       - name: Deploy
         uses: cloudflare/wrangler-action@v3
