fix: Correct JSON syntax in deployment workflow for wrangler.json

--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -19,7 +19,8 @@ jobs:
       - run: pnpm install
       # - run: echo ${{ secrets.WRANGLER_JSON }} > ./wrangler.json
       #   working-directory: ./packages/web
-      - run: echo '{"name": "kimyou"}' > ./wrangler.json
+      - run: JSON='{"name":"kimyou""}'
+      - run: echo ${JSON} > ./wrangler.json
         working-directory: ./packages/web
       - name: Deploy
         uses: cloudflare/wrangler-action@v3
