--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -19,7 +19,7 @@ jobs:
       - run: pnpm install
       # - run: echo ${{ secrets.WRANGLER_JSON }} > ./wrangler.json
       #   working-directory: ./packages/web
-      - run: JSON='{"name":"kimyou""}'
+      - run: JSON='{"name":"kimyou"}'
       - run: echo ${JSON} > ./wrangler.json
         working-directory: ./packages/web
       - name: Deploy
