--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -19,8 +19,7 @@ jobs:
       - run: pnpm install
       # - run: echo ${{ secrets.WRANGLER_JSON }} > ./wrangler.json
       #   working-directory: ./packages/web
-      - run: JSON='{"name":"kimyou"}'
-      - run: echo ${JSON} > ./wrangler.json
+      - run: echo '{"name":"kimyou"}' > ./wrangler.json
         working-directory: ./packages/web
       - name: Deploy
         uses: cloudflare/wrangler-action@v3
