--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -17,12 +17,12 @@ jobs:
         with:
           version: 10
       - run: pnpm install
-      # - run: echo ${{ secrets.WRANGLER_JSON }} > ./wrangler.json
-      #   working-directory: ./packages/web
-      - run: echo '{"name":"kimyou"}' > ./wrangler.json
+      - run: echo ${{ secrets.BASE64_WRANGLER_JSON }} | base64 --decode > ./wrangler.json
         working-directory: ./packages/web
       - name: Deploy
         uses: cloudflare/wrangler-action@v3
         with:
+          accountId: ${{ secrets.CLOUDFLARE_ACCOUNT_ID }}
           apiToken: ${{ secrets.CLOUDFLARE_API_TOKEN }}
           workingDirectory: ./packages/web
+          quiet: true
