--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -9,27 +9,31 @@ jobs:
   deploy-web:
     name: Deploy Web Package
     runs-on: ubuntu-latest
+    env:
+      BASE64_WRANGLER_JSON: ${{ secrets.BASE64_WRANGLER_JSON }}
+      CLOUDFLARE_ACCOUNT_ID: ${{ secrets.CLOUDFLARE_ACCOUNT_ID }}
+      CLOUDFLARE_API_TOKEN: ${{ secrets.CLOUDFLARE_API_TOKEN }}
     steps:
       - uses: actions/checkout@v4
       - uses: pnpm/action-setup@v4
         with:
           version: 10
       - run: pnpm install
-      - run: echo ${{ secrets.BASE64_WRANGLER_JSON }} | base64 --decode > ./wrangler.json
+      - run: echo $BASE64_WRANGLER_JSON | base64 --decode > ./wrangler.json
         working-directory: ./packages/web
       - name: Deploy demo
         uses: cloudflare/wrangler-action@v3
         with:
           environment: demo
-          accountId: ${{ secrets.CLOUDFLARE_ACCOUNT_ID }}
-          apiToken: ${{ secrets.CLOUDFLARE_API_TOKEN }}
+          accountId: $CLOUDFLARE_ACCOUNT_ID
+          apiToken: $CLOUDFLARE_API_TOKEN
           workingDirectory: ./packages/web
           quiet: true
       - name: Deploy prod
         uses: cloudflare/wrangler-action@v3
         with:
           environment: prod
-          accountId: ${{ secrets.CLOUDFLARE_ACCOUNT_ID }}
-          apiToken: ${{ secrets.CLOUDFLARE_API_TOKEN }}
+          accountId: $CLOUDFLARE_ACCOUNT_ID
+          apiToken: $CLOUDFLARE_API_TOKEN
           workingDirectory: ./packages/web
           quiet: true
