--- a/packages/batch/package.json
+++ b/packages/batch/package.json
@@ -7,6 +7,7 @@
   },
   "license": "MIT",
   "dependencies": {
-    "commander": "13.1.0"
+    "commander": "13.1.0",
+    "csv-parse": "5.6.0"
   }
 }
