--- a/packages/batch/package.json
+++ b/packages/batch/package.json
@@ -8,6 +8,7 @@
   "license": "MIT",
   "dependencies": {
     "commander": "13.1.0",
-    "csv-parse": "5.6.0"
+    "csv-parse": "5.6.0",
+    "web": "workspace:*"
   }
 }
