--- a/packages/web/tsconfig.json
+++ b/packages/web/tsconfig.json
@@ -12,7 +12,9 @@
       "@cloudflare/workers-types/2023-07-01",
       "vitest/importMeta"
     ],
+    // JSX elements are converted to _jsx calls
     "jsx": "react-jsx",
+    // use hono/jsx to factory JSX
     "jsxImportSource": "hono/jsx",
   },
 }
