Add eslint and CI workflow (#15)
* chore: Add ESLint configuration and lint script to package.json

* fix: Disable ESLint rule for irregular whitespace in homyo generation

* chore: Add lint:fix script to package.json for automatic ESLint fixes

* chore: Remove unused import

* chore: Remove unused import

* refactor: Update Layout component to use Child type for children prop

* ci: Add CI workflow for linting and testing on pull requests

--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -2,6 +2,8 @@
   "name": "web",
   "type": "module",
   "scripts": {
+    "lint": "eslint",
+    "lint:fix": "eslint --fix",
     "test": "vitest run",
     "dev": "wrangler dev --config=./wrangler.local.json",
     "deploy": "wrangler deploy --minify",
@@ -16,8 +18,12 @@
   },
   "devDependencies": {
     "@cloudflare/workers-types": "^4.20250109.0",
+    "@eslint/js": "^9.20.0",
     "@faker-js/faker": "9.4.0",
+    "eslint": "^9.20.1",
+    "globals": "^15.14.0",
     "tailwindcss": "4.0.3",
+    "typescript-eslint": "^8.24.0",
     "wrangler": "^3.101.0"
   }
 }
