--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -5,6 +5,7 @@
     "lint": "eslint",
     "lint:fix": "eslint --fix",
     "test": "vitest run",
+    "test:update": "vitest -u run",
     "dev": "wrangler dev --config=./wrangler.local.json",
     "deploy": "wrangler deploy --minify",
     "drizzle:generate": "drizzle-kit generate --config=./src/infrastructure/db/d1/drizzle.config.ts",
@@ -22,6 +23,7 @@
     "@faker-js/faker": "9.4.0",
     "eslint": "^9.20.1",
     "globals": "^15.14.0",
+    "miniflare": "3.20250204.1",
     "tailwindcss": "4.0.3",
     "typescript-eslint": "^8.24.0",
     "wrangler": "^3.101.0"
