--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -18,6 +18,7 @@
     "hono": "^4.6.20"
   },
   "devDependencies": {
+    "@cloudflare/vitest-pool-workers": "0.6.15",
     "@cloudflare/workers-types": "^4.20250109.0",
     "@eslint/js": "^9.20.0",
     "@faker-js/faker": "9.4.0",
