--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -4,8 +4,8 @@
   "scripts": {
     "lint": "eslint",
     "lint:fix": "eslint --fix",
-    "test": "vitest run",
-    "test:update": "vitest -u run",
+    "test": "TZ=Asia/Tokyo vitest run",
+    "test:update": "TZ=Asia/Tokyo vitest -u run",
     "dev": "wrangler dev --config=./wrangler.local.json",
     "deploy": "wrangler deploy --minify",
     "drizzle:generate": "drizzle-kit generate --config=./src/infrastructure/db/d1/drizzle.config.ts",
