--- a/package.json
+++ b/package.json
@@ -11,14 +11,17 @@
   "devDependencies": {
     "@types/node": "22.13.4",
     "drizzle-kit": "0.30.4",
+    "eslint": "9.20.1",
+    "globals": "15.15.0",
     "typescript": "5.7.3",
-    "vitest": "2.1.8"
+    "typescript-eslint": "8.24.1",
+    "vitest": "2.1.8",
+    "tsx": "4.19.2"
   },
   "dependencies": {
     "date-fns": "4.1.0",
     "drizzle": "1.4.0",
     "drizzle-orm": "^0.39.2",
-    "tsx": "4.19.2",
     "valibot": "1.0.0-beta.14"
   }
 }
