Move application codes (#53)
* chore: Move application codes

* ci: Set working directory for CI jobs

* ci: Update working directory path in CI configuration

* ci: Specify package.json path in CI configuration

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -5,26 +5,41 @@ on:
     types: [opened, reopened, synchronize]
 
 jobs:
-  lint:
+  lint-web:
     runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: ./application
     steps:
       - uses: actions/checkout@v4
       - uses: pnpm/action-setup@v4
+        with:
+          package_json_file: ./application/package.json
       - run: pnpm install
       - run: pnpm web lint
 
-  test:
+  test-web:
     runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: ./application
     steps:
       - uses: actions/checkout@v4
       - uses: pnpm/action-setup@v4
+        with:
+          package_json_file: ./application/package.json
       - run: pnpm install
       - run: pnpm web test
 
-  typecheck:
+  typecheck-web:
     runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: ./application
     steps:
       - uses: actions/checkout@v4
       - uses: pnpm/action-setup@v4
+        with:
+          package_json_file: ./application/package.json
       - run: pnpm install
       - run: pnpm web typecheck
