--- a/application/packages/web/package.json
+++ b/application/packages/web/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "@hono/valibot-validator": "0.5.2",
+    "clsx": "^2.1.1",
     "hono": "^4.6.20"
   },
   "devDependencies": {
