--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -40,7 +40,7 @@ jobs:
       - uses: actions/checkout@v4
       - uses: actions/setup-go@v5
         with:
-          go-version-file: ./go.mod
+          go-version-file: ./scripts/cloudflare/go.mod
       - run: go test -v ./...
         env:
           INTEGRATION_TEST: true
