--- a/application/package.json
+++ b/application/package.json
@@ -9,14 +9,18 @@
   "packageManager": "pnpm@10.4.0",
   "license": "MIT",
   "devDependencies": {
+    "@cloudflare/vitest-pool-workers": "0.6.15",
+    "@cloudflare/workers-types": "4.20250214.0",
+    "@eslint/js": "^9.20.0",
     "@types/node": "22.13.4",
     "drizzle-kit": "0.30.4",
     "eslint": "9.20.1",
     "globals": "15.15.0",
+    "tsx": "4.19.3",
     "typescript": "5.7.3",
     "typescript-eslint": "8.24.1",
     "vitest": "2.1.8",
-    "tsx": "4.19.3"
+    "wrangler": "^3.101.0"
   },
   "dependencies": {
     "date-fns": "4.1.0",
