feat: Add development and deployment scripts to batch-release-lock package

--- a/application/packages/web/package.json
+++ b/application/packages/web/package.json
@@ -21,5 +21,8 @@
   },
   "devDependencies": {
     "miniflare": "3.20250214.0"
+  },
+  "exports": {
+    "./schema": "./src/infrastructure/db/d1/schema.ts"
   }
 }
