--- a/application/packages/batch-release-lock/package.json
+++ b/application/packages/batch-release-lock/package.json
@@ -5,6 +5,11 @@
     "typecheck": "tsc --noEmit",
     "lint": "eslint",
     "lint:fix": "eslint --fix",
-    "test": "TZ=Asia/Tokyo vitest run"
+    "test": "TZ=Asia/Tokyo vitest run",
+    "dev": "wrangler dev --config=./wrangler.local.json --test-scheduled --persist-to=../web/.wrangler/state",
+    "deploy": "wrangler deploy --minify"
+  },
+  "dependencies": {
+    "web": "workspace:*"
   }
 }
