--- a/application/packages/web/package.json
+++ b/application/packages/web/package.json
@@ -10,8 +10,10 @@
     "dev": "wrangler dev --config=./wrangler.local.json",
     "deploy": "wrangler deploy --minify",
     "drizzle:generate": "drizzle-kit generate --config=./src/infrastructure/db/d1/drizzle.config.ts",
-    "drizzle:migrate:local": "wrangler d1 migrations apply D1 --local --config=./wrangler.local.json",
-    "drizzle:migrate": "wrangler d1 migrations apply D1 --remote"
+    "migrate:local": "wrangler d1 migrations apply D1 --local --config=./wrangler.local.json",
+    "migrate": "wrangler d1 migrations apply D1 --remote",
+    "migrate:demo": "wrangler d1 migrations apply D1 --remote --env=demo",
+    "migrate:prod": "wrangler d1 migrations apply D1 --remote --env=prod"
   },
   "dependencies": {
     "@date-fns/tz": "^1.2.0",
