--- a/.github/workflows/migration.yaml
+++ b/.github/workflows/migration.yaml
@@ -10,7 +10,7 @@ jobs:
     runs-on: ubuntu-latest
     defaults:
       run:
-        working-directory: ./application/web
+        working-directory: ./application/packages/web
     steps:
       - uses: actions/checkout@v4
       - uses: pnpm/action-setup@v4
