--- a/.github/workflows/migration.yaml
+++ b/.github/workflows/migration.yaml
@@ -19,3 +19,6 @@ jobs:
       - run: pnpm install
       - run: echo ${{ env.BASE64_WRANGLER_JSON_WEB }} | base64 --decode > ./wrangler.json
       - run: pnpm migrate:prod
+        env:
+          CLOUDFLARE_ACCOUNT_ID: ${{ secrets.CLOUDFLARE_ACCOUNT_ID }}
+          CLOUDFLARE_API_TOKEN: ${{ secrets.CLOUDFLARE_API_TOKEN }}
